--- a/Project_WebDev/package.json
+++ b/Project_WebDev/package.json
@@ -2,7 +2,7 @@
   "name": "liburanyuk",
   "version": "1.0.0",
   "description": "Travel Blog",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
